some more css and spacing fixes

--- a/src/app.css
+++ b/src/app.css
@@ -173,7 +173,7 @@ p {
 }
 .single-rest-div{
     font-family: 'Cardo', serif;
-    color: white;
+    color: rgb(80, 3, 80);
 
 }
 .table-header-background {
